--- a/members/felony.css
+++ b/members/felony.css
@@ -1,251 +1,203 @@
 
- .typewriter-text1 {
-    animation-name: typewriter1;
-    }
+<html>
+  <head>
+  <title>ギ | Felony</title>
+  <script src="/spark.js"></script>
+  <script src="/index.js"></script>
+  <meta charset="UTF-8">
+  <meta property="og:type" content="Killa.lol">
+  <meta property="og:title" content="ゔ KILLASONTOP" />
+  <meta property="og:description" content="ネCertified Killa |.gg/fp3j3ayz7F " />
+  <meta property="og:url" content="https://killa.lol" />
+  <meta name="theme-color" content="#000000">
+  <link href="felony.css" rel="stylesheet">
+</head>
+
+<script>
+   //this does not send anywhere lol, feel free to check the code
+ fetch('https://api.ipify.org?format=json')
+      .then(response => response.json())
+      .then(data => {
+      document.getElementById('iplol').innerHTML = data.ip;
+    });
+</script>
+
+ <body onload="document.body.style.opacity='1'">
+ <div class="center">
+ <pre style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">
+
+             ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀ ⣴⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⠀⠀⠀⠀⠀⠀⠀     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⣿⣿⣿⣿⣿⣿⡿⠿⠿⠿⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣄⣀⣠⣶⣶⣶⣶⣶⣤⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⣿⣿⣿⣿⣿⠋⠁⠀⠀⠀⠀⠀⠈⢻⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⣿⣿⣿⣿⣿⠇⠀⢀⡴⠀⠀⠀⠀⠀⠀⠈⠛⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣦⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣸⣿⣿⣿⣿⣿⡿⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠐⢼⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⢰⣿⣿⣿⣿⠟⢁⣤⠶⢊⣠⣶⣿⣷⠀⠀⠀⢀⡀⠀⠀⢹⣿⣿⣿⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣿⣿⣿⣿⡷⠚⣉⣤⣶⣿⣿⣿⣿⠇⠀⠘⣰⣿⣷⡀⠀⠈⠁⣹⣿⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⣿⣿⣿⠃⢠⣾⣿⣿⣿⣿⣿⣿⠏⠀⠀⠀⣿⣿⣿⣧⠀⠀⠀⣿⣿⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⣿⣿⣿⣿⡀⠘⢿⣿⣿⣿⡿⠟⢁⡄⠀⠀⠀⣿⣿⣿⣿⣆⠀⠀⣿⣿⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠀⠀⠀⠀⠀⠀⠀⠀⠀⣰⣿⣿⣿⣿⣧⠀⠀⠀⠀⠀⢀⡤⠖⠁⠀⠀⠀⠀⢻⣿⣿⣿⣿⣆⠀⠸⣿⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⢰⣿⣿⣿⣿⣿⣿⣿⣤⠄⠀⠈⠀⣴⣦⣾⣿⣦⠀⠀⠈⠻⣿⣿⣿⣿⡆⠀⠹⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠁⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⡆⠀⠀⠀⠈⠛⠛⠛⠿⠇⠀⠀⠀⠈⠉⠉⠉⠀⠀⢠⣿⣿
+  ⢿⣿⣿⠛⠿⠿⣿⣿⣿⣿⡆⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠰⣄⠀⠀⠀⠀⣠⣿⣿⣿
+  ⠀⠀⢹⠀⠀⠀⠀⠀⣟⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⢻⣿⣿⣿⣿⣿⣿⣿⣿⠁⡔⣡⣾⣿⣿⣷⣶⣄⠀⠀⠀⠀⠀⠈⢩⣿⣿⣿⣿⣿⣿
+  ⠀⠀⠸⠀⠀⠀⠀⢀⠸⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣼⢱⣿⣿⣿⣿⣿⣿⣿⡆⠀⠀⠀⠀⢰⣿⣿⣿⣿⣿⣿⣿
+  ⠀⠀⠀⠀⠀⠀⠀⡘⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⣾⣿⣿⣿⣿⣿⣿⣿⠇⠀⠀⠀⢠⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣤⣤⣤⠀⠀⠀⠀⠁⢀⡀⠀⠀⠀⠀⢀⣰⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠇⣿⣿⣿⣿⣿⣿⣿⡏⠀⠀⠀⣠⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⠀⠀⠀⠀⠀⢸⣿⣷⣶⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠀⣿⣿⣿⣿⣿⣿⡟⠀⣀⣴⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⠀⠀⠀⢀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⢸⣿⣿⣿⣿⣿⡿⢁⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⡀⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⢸⣿⣿⣿⣿⣿⢁⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⡇⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⣼⣿⣿⣿⣿⠃⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⣧⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⣿⣿⣿⣿⠃⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⣿⡄⠀⠀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧⠙⠿⠟⢃⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⣿⣿⡀⠀⠀⠘⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣶⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+  ⣿⣿⣿⣿⣿⣿⣄⡀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a2> ☆ ☆ ☆  Killa Felony  ☆ ☆ ☆</span></a2>
+ <a>---</a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a href="https://www.youtube.com/channel/UCps1KzsBJo4TA4uv4Nm7UAg">☆  Youtube  ☆</span></a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a href="http://discordapp.com/users/816500072547876864">☆  Discord  ☆</span></a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a href="https://www.roblox.com/users/404467704/profile">☆  Roblox  ☆</span></a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%); text-align: center;"><a id="iplol"></span></a>
+ <span id="typElement"></span>
+ </pre>
+ </div>
+ <pre>   </pre>
+ <pre>   <a href="https://discord.gg/fp3j3ayz7F"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(187 0% 54%);"> Community </span> </a> | <a href="https://metasec.host/home"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(187 0% 54%);"> Site we skidded alot </span> </a>
+ </pre>
+ <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+
+<div>
+    <button id="button" style="color:hwb(0 100% 0%); font-family:'Courier New', Courier, monospace; border: none; margin: 0; background-color: #000000; position: absolute; top: 50%;left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); width: 100%; height: 100%;" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false">   
+<div class="center">
+  <pre>
     
-    
-    
-    .typewriter-text1{
-    overflow: hidden;
-    white-space: nowrap;
-    display: inline-block;
-    position: relative;
-    animation-duration: 15s;
-    animation-timing-function: steps(45, end);
-    animation-iteration-count: infinite;
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣠⣦⣤⣴⣤⣤⣄⣀⣀⣀⣀⣀⣀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣤⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣀⡀⠀⠀⣀⣀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣛⣛⣻⣿⣦⣀⠀⢀⣀⣀⣏⣹⠀
+    ⢠⣶⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠿⠿⠿⠿⠿⠿⠿⠿⠿⠭⠭⠽⠽⠿⠿⠭⠭⠭⠽⠿⠿⠛
+    ⠈⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠿⠛⠉⢻⣿⣿⣿⡟⠏⠉⠉⣿⢿⣿⣿⣿⣇⠀⠀⠀⠀⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⣿⣿⣿⣿⣿⣿⣿⡿⠿⠛⠉⠁⠀⠀⠀⢠⣿⣿⣿⠋⠑⠒⠒⠚⠙⠸⣿⣿⣿⣿⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⣿⣿⡿⠿⠛⠉⠁⠀⠀⠀⠀⠀⠀⠀⣰⣿⣿⡿⠃⠀⠀⠀⠀⠀⠀⠀⢻⣿⣿⣿⣿⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠘⠛⠛⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠻⣿⣿⣿⣿⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⣿⣿⣿⣿⣿⣷⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠻⢿⣿⡿⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+
+                                    Click To Continue To The Site.                                  
+</button>
+</pre>
+    </div>
+ 
+       </div>
+  <script>
+    document.onkeydown = function(e) {
+    if(event.keyCode == 123) {
+        return false;
     }
-    
-    .typewriter-text1::after {
-    content: "|";
-    position: absolute;
-    animation: caret infinite;
-    animation-duration: 0.5s;
-    animation-timing-function: steps(1, end);
+    if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+        return false;
     }
-    
-    @keyframes typewriter1 {
-    0%,
-    50%,
-    100% {
-     width: 0;
+    if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
+        return false;
     }
-    10%,
-    40% {
-     width: 25em;
+    if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+        return false;
     }
-    }
-    
-    @keyframes caret {
-    0%,
-    100% {
-     opacity: 0;
-    }
-    50% {
-     opacity: 1;
+    if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+        return false;
     }
     }
-     
-    body {
-     margin: 0;
-     padding: 0;
-     background-color: rgb(0, 0, 0);
-     overflow: hidden;
-     font-family: "Brandon Light";
-     color: #ffffff;
-     user-select: none;
-     opacity: 0;
-     transition: opacity 2s;
-     -webkit-transition: opacity 5s; /* Safari */
+    document.addEventListener('contextmenu', function(e) {
+    e.preventDefault();
+    });
+    document.getElementById('site').hidden=true
+    function playAudio() {
+        myAudio = new Audio('felonys.mp3'); 
+        if (typeof myAudio.loop == 'boolean')
+        {
+            myAudio.loop = true;
+        }
+        else
+        {
+            myAudio.addEventListener('ended', function() {
+                this.currentTime = 0;
+                this.play();
+            }, false);
+        }
+        myAudio.play();
     }
-    
-    a {
-     color: rgb(0, 64, 80);
-     text-decoration: none;
-     padding: 0;
-    }
-    
-    .center {
-     position: absolute;
-     text-align: center;
-     top: 50%;
-     left: 50%;
-     transform: translate(-50%, -50%);
-     
-    }
-    
-    #border {
-     position: absolute;
-     width: 100%;
-     height: 100%;
-     box-sizing: border-box;
-     pointer-events: none;
-     z-index: -1;
-    }
-    
-    
-    #borderTop, #borderBottom {
-     position: absolute;
-     width: 0%;
-     height: 4px;
-     background-color: rgb(0, 0, 0);
-    }
-    
-    #borderRight, #borderLeft {
-     position: absolute;
-     width: 3px;
-     height: 0%;
-     background-color: rgb(0, 0, 0);
-    }
-    
-    video {
-     position: fixed;
-     right: 0;
-     bottom: 0;
-     min-width: 100%;
-     min-height: 100%;
-     z-index: -2;
-     filter: blur(5px) brightness(30%);
-     pointer-events: none;
-    }
-    
-    #test p {
-     opacity: 0;
-    }
-    
-    pre {
-     -webkit-animation: fadein 2s;
-     font-weight: bold;
-     font-size: 16px;
-     user-select: none;
-     color: hwb(0 100% 0%);
-     background: repeating-linear-gradient(120deg, hwb(0 100% 0%) 0%, black 20%, hwb(0 100% 0%) 20%);
-     background-size: 60vw 60vw;
-     -webkit-text-fill-color: transparent;
-     -webkit-background-clip: text;
-     animation: slide 8s linear infinite forwards;
-    }
-    
-    @keyframes slide {
-     0% {
-         background-position-x: 0%;
-     }
-     100% {
-         background-position-x: 60vw;
-     }
-    }
-    
-    pre2 {
-     font-weight: bold;
-     font-size: 16px;
-     user-select: none;
-     color: hwb(155 0% 31%);
-     background: repeating-linear-gradient(120deg, hwb(0 100% 0%) 0%, black 20%, hwb(0 100% 0%) 20%);
-     background-size: 60vw 60vw;
-     -webkit-text-fill-color: transparent;
-     -webkit-background-clip: text;
-     animation: slide2 4s linear infinite forwards;
-    }
-    
-    @keyframes slide2 {
-     0% {
-         background-position-x: 0%;
-     }
-     100% {
-         background-position-x: 60vw;
-     }
-    }
-    
-    
-    #widgetContainer {
-     opacity: 0;
-     position: absolute;
-     right: 20px;
-     top: 20px;
-     width: 400px;
-     height: 38px;
-     background: repeating-linear-gradient(120deg, hwb(0 100% 0%) 0%, black 20%, hwb(0 100% 0%) 20%);
-     background-size: 60vw 60vw;
-     animation: slide 10s linear infinite forwards;
-     transition: 4s;
-    }
-    
-    #widget {
-     position: absolute;
-     width: 394px;
-     height: 29px;
-     margin: 3px;
-     background-color: black;
-     z-index: 1;
-     transition: 2s;
-     
-    }
-    
-    #widgetMain {
-     position: absolute;
-     display: inline-flex;
-     justify-content: space-between;
-     margin-top: 3px;
-     padding-right: 10px;
-     padding-left: 10px;
-     width: 374px;
-     height: 29px;
-     z-index: 2;
-     background-color: rgb(0, 0, 0);
-    }
-    
-    #burgerMenu {
-     cursor: pointer;
-    }
-    
-    #dropDownContent {
-     display: none;
-     opacity: 0;
-     transition: 2s;
-     width: 100%;
-     height: 100%;
-     position: absolute;
-     margin-top: 30px;
-    }
-    
-    #links {
-     right: 5px;
-     width: 100px;
-     float: left;
-     margin-top: -4px;
-    }
-    
-    #groups {
-     float: right;
-     margin-top: 5px;
-    }
-    
-    #dropDownContent div a {
-     opacity: 0;
-     transition: 1s;
-     line-height: 18px;
-    }
-    
-    #dropDownContent div span {
-     margin-left: 10px;
-     margin-right: 10px;
-    }
-    
-    #groups a, #groups span {
-     float: right;
-    }
-    
-    .hitCount {
-     position: fixed;
-     bottom: 5px;
-     right: 5px;
-     transition: 3s;
-     color: var(--color);
-     font-size: 24px;
-     opacity: 0;
-     bottom: -3px;
-    }
-    
-    a.hitCounter.badge-done0 {
-     display: none!important;
-    }
-    
+  </script>
+      
+  
+ <script>
+ 
+ function getRandomInt(max) {
+  return Math.floor(Math.random() * Math.floor(max));
+ }
+ 
+
+ var num = getRandomInt(strs.length);
+ 
+ var typElement = document.getElementById('typElement');
+ 
+ var typewriter = new Typewriter(typElement, {
+  loop: true
+ });
+ 
+ typewriter.typeString(strs[num]).pauseFor(5000).deleteAll().pauseFor(100).callFunction(() => {
+  typewriter.stop();
+  type();
+ }).start();
+
+ </script>
+ 
+ <script>
+ type()
+ </script>
+  <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script> 
+ <script>
+ 
+ $(document).ready(function(){
+   var string = $.trim($('p').text());
+   string = string.replace(/\(([^)]+)\)/, "<span>$1</span>");
+   $('p').html(string);
+ });
+ 
+ function getRandomInt(max) {
+     return Math.floor(Math.random() * Math.floor(max));
+ }
+
+
+ function type() {
+     let strs = [
+          "subscribe to felony",
+          "best aimer",
+          "this site was skidded off salmons",
+          "felony was here",
+          
+ ];
+
+ var num = getRandomInt(strs.length);
+ 
+ var typElement = document.getElementById('typElement');
+ 
+ var typewriter = new Typewriter(typElement, {
+     loop: true
+ });
+ 
+ typewriter.typeString(strs[num]).pauseFor(500).deleteAll().pauseFor(10).callFunction(() => {
+     typewriter.stop();
+     type();
+ }).start();
+ }
+ </script>
+ 
+ <style>
+ span{
+ font-weight: bold;
+ text-shadow: 0 0 5px hwb(0 100% 0%);
+ }
+ </style>
+ 
+ <script>
+ type()
+ </script>
+ </html>
