--- a/members/felony.css
+++ b/members/felony.css
@@ -51,7 +51,7 @@
      background-color: rgb(0, 0, 0);
      overflow: hidden;
      font-family: "Brandon Light";
-     color: #ffffff;
+     color: #6200ff;
      user-select: none;
      opacity: 0;
      transition: opacity 2s;
@@ -117,8 +117,8 @@
      font-weight: bold;
      font-size: 16px;
      user-select: none;
-     color: hwb(0 100% 0%);
-     background: repeating-linear-gradient(120deg, hwb(0 100% 0%) 0%, black 20%, hwb(0 100% 0%) 20%);
+     color: hwb(258 0% 0%);
+     background: repeating-linear-gradient(120deg, hwb(258 0% 0%) 0%, black 20%, hwb(258 0% 0%) 20%);
      background-size: 60vw 60vw;
      -webkit-text-fill-color: transparent;
      -webkit-background-clip: text;
@@ -139,7 +139,7 @@
      font-size: 16px;
      user-select: none;
      color: hwb(155 0% 31%);
-     background: repeating-linear-gradient(120deg, hwb(0 100% 0%) 0%, black 20%, hwb(0 100% 0%) 20%);
+     background: repeating-linear-gradient(120deg, hwb(258 0% 0%) 0%, black 20%, hwb(258 0% 0%) 20%);
      background-size: 60vw 60vw;
      -webkit-text-fill-color: transparent;
      -webkit-background-clip: text;
@@ -163,7 +163,7 @@
      top: 20px;
      width: 400px;
      height: 38px;
-     background: repeating-linear-gradient(120deg, hwb(0 100% 0%) 0%, black 20%, hwb(0 100% 0%) 20%);
+     background: repeating-linear-gradient(120deg, hwb(258 0% 0%) 0%, black 20%, hwb(258 0% 0%) 20%);
      background-size: 60vw 60vw;
      animation: slide 10s linear infinite forwards;
      transition: 4s;
