--- a/backrounds.css
+++ b/backrounds.css
@@ -154,7 +154,7 @@ body header > div #popout .popout-body .avatar .status {
   right: -5px;
   width: 25px;
   height: 25px;
-  background: url("https://discord.c99.nl/widget/theme-4/1000022273673138226.png") no-repeat;
+  background: url("") no-repeat;
   background-position: -130px -129px;
   background-size: 900px;
   border-radius: 50%;
